# microcomp

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
src/: mccomp.cpp  mccomp.h
